flux/default/postfix/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: postfix
spec:
  endpointSelector:
    matchLabels:
      app: postfix
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: yaoae
    toPorts:
    - ports:
      - port: "25"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "25"
        protocol: TCP
